Agregado de Auth con JWT

--- a/Reboot/appsettings.json
+++ b/Reboot/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RebootContext": "Server=.;Database=Ferreteria;User Id=sa;Password=polo;"
+  },
+  "Jwt": {
+    "Issuer": "WebApiJwt.com",
+    "Audience": "localhost",
+    "Key": "S3cr3t_K3y!.123_S3cr3t_K3y!.123"
   }
 }
 
